fix color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ header {
 }
 
 #my-logo {
-  color: #6070ff;
+  color: #142CFF;
   font-weight: 700;
   font-size: 18px;
 }
